--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,9 @@ h1 {
   text-align: left;
   margin-bottom: 0;
 }
+a {
+  text-decoration: none;
+}
 
 ul {
   margin: 0;
@@ -19,6 +22,7 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+  text-transform: capitalize;
   color: rgb(135, 135, 135);
   font-size: 16px;
   font-weight: 100;
